More layout tweaks, prevent overflow. Close dropdown on notification click.

--- a/app/styles/custom/components/_components.notifications.scss
+++ b/app/styles/custom/components/_components.notifications.scss
@@ -1,2 +1,5 @@
-.c-notification-img-date-container { min-width: 60px; }
-.c-notification-body { max-width: 240px; }
+.c-notification-img-date-container { width: 70px; }
+.c-notification-body {
+  max-width: 240px;
+  overflow-wrap: break-word;
+}
